# yolov8_api_rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
