[package]
publish = false
name = "example-yolov8"
version = "0.0.0"
edition = "2021"

[dependencies]
ort = { git = "https://github.com/pykeio/ort.git", rev="v2.0.0-rc.6" }
# ort = { version = "1.16.3", default-features = false }
ndarray = "0.16"
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
image = "0.25"
show-image = { version = "0.14", features = [ "image", "raqote" ] }
raqote = { version = "0.8", default-features = false }
ureq = "2.1"
tracing = "0.1"
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }

[features]
load-dynamic = [ "ort/load-dynamic" ]
cuda = [ "ort/cuda" ]
